Update OpenAPI spec doc for Printer API (#15)
